CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OpticalFlow)
FIND_PACKAGE(OpenCV REQUIRED)

# files
SET(SRC src/)
FILE(GLOB_RECURSE FILES_SRC ${SRC}*.cpp)

# include
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/*)

ADD_DEFINITIONS("-std=c++11")
ADD_EXECUTABLE(OpticalFlow main.cpp ${FILES_SRC})
TARGET_LINK_LIBRARIES(OpticalFlow ${OpenCV_LIBS} pthread)
